--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,131 @@
 body {
-    background-color: blue;
+	/* color palette: https://colorhunt.co/palette/16213e0f3460533483e94560 */
+	background-color: #e9dec1;
+	text-align: center;
+	font-family: 'Lato', sans-serif;
+	font-size: 1.3em;
+	line-height: 2;
+	margin: 0;
+}
+
+h1 {
+	font-family: 'Caveat', cursive;
+}
+
+h2 {
+	font-family: 'Lato', sans-serif;
+	color: #E94560;
+}
+
+h3 {
+	font-family: 'Lato', sans-serif;
+}
+
+a {
+	color: #e9e9e9;
+	text-decoration: none;
+	font-weight: bold;
+	margin: 10px 30px;
+}
+
+a:hover {
+	color: gainsboro;
+}
+
+.footer-copyright {
+	color: gainsboro;
+	font-size: .7em;
+}
+
+.name-profile {
+	margin-top: 150px;
+	font-size: 5rem;
+}
+
+.name {
+	color: #0F3460;
+}
+
+.bottom-cloud {
+	position: absolute;
+}
+
+.top-cloud {
+	margin-top: 100px;
+	margin-left: 400px;
+}
+
+.profile-home {
+	width: 200px;
+	border-radius: 100%;
+	margin: 100px auto 50px auto;
+}
+
+.skills-home {
+	width: 50%;
+	margin: auto;
+	text-align: left;
+	line-height: 2em;
+}
+
+.skills-img {
+	width: 15%;
+	float: left;
+	margin-right: 30px;
+}
+
+.skills-img-2 {
+	width: 15%;
+	float: right;
+	margin-left: 30px;
+}
+
+.break-home {
+	border-color: #E94560;
+	border-style: none;
+	border-top-style: inset;
+	border-width: 2px;
+	width: 5%;
+	margin: 150px auto 150px auto;
+}
+
+.home-margin-bottom {
+	margin-bottom: 100px;
+}
+
+.contact-me {
+	margin: 100px auto;
+	line-height: 3em;
+}
+
+.btn {
+	background: #734bb3;
+	background-image: -webkit-linear-gradient(top, #734bb3, #533483);
+	background-image: -moz-linear-gradient(top, #734bb3, #533483);
+	background-image: -ms-linear-gradient(top, #734bb3, #533483);
+	background-image: -o-linear-gradient(top, #734bb3, #533483);
+	background-image: linear-gradient(to bottom, #734bb3, #533483);
+	-webkit-border-radius: 10;
+	-moz-border-radius: 10;
+	border-radius: 10px;
+	font-family: 'Lato', sans-serif;
+	color: #ffffff;
+	font-size: 20px;
+	padding: 10px 20px 10px 20px;
+	text-decoration: none;
+}
+
+.btn:hover {
+	background: #9c72e0;
+	background-image: -webkit-linear-gradient(top, #9c72e0, #734bb3);
+	background-image: -moz-linear-gradient(top, #9c72e0, #734bb3);
+	background-image: -ms-linear-gradient(top, #9c72e0, #734bb3);
+	background-image: -o-linear-gradient(top, #9c72e0, #734bb3);
+	background-image: linear-gradient(to bottom, #9c72e0, #734bb3);
+	text-decoration: none;
+}
+
+.bottom-container {
+	background-color: #E94560;
+	padding: 50px 0 20px;
 }
